tests/sema/negative/vec_unknown_struct_element.nv
fn main() : void {
    let xs : vec<Token> = vec_new();
    return;
}
